Added RSS feeds

--- a/posts/2020-12-20-post-1.md
+++ b/posts/2020-12-20-post-1.md
@@ -1,8 +1,9 @@
 ---
-Title: Lorem ipsum dolor sit amet - Post 1
+Title: Lorem ipsum dolor sit amet consectetur - Post 1
 Description: Post 1
 Slug: post-1
 Listing: true
+Created: Dec 20, 2020
 Tags: [tag1, tag2]
 ---
 
