--- a/posts/2020-12-21-post-2.md
+++ b/posts/2020-12-21-post-2.md
@@ -3,6 +3,7 @@ Title: Aenean nibh lorem, pretium et augue sed - Post 2
 Description: Post 2
 Slug: post-2
 Listing: true
+Created: Dec 21, 2020
 Tags: [sim, some, sum, tag1]
 ---
 
